cbits/Bullet.h

void btAABB_invalidate(void *c); //method: invalidate void ( ::btAABB::* )(  ) 
int btAABB_has_collision(void *c,void* p0); //method: has_collision bool ( ::btAABB::* )( ::btAABB const & ) const
//not supported method: projection_interval void ( ::btAABB::* )( ::btVector3 const &,::btScalar &,::btScalar & ) const
// error: ::btVector3 const & - ok,  - unsupported,  - unsupported, void - ok

void btAABB_appy_transform_trans_cache(void *c,void* p0); //method: appy_transform_trans_cache void ( ::btAABB::* )( ::BT_BOX_BOX_TRANSFORM_CACHE const & ) 
void btAABB_calc_from_triangle_margin(void *c,float* p0,float* p1,float* p2,float p3); //method: calc_from_triangle_margin void ( ::btAABB::* )( ::btVector3 const &,::btVector3 const &,::btVector3 const &,::btScalar ) 
void btAABB_increment_margin(void *c,float p0); //method: increment_margin void ( ::btAABB::* )( ::btScalar ) 
void btAABB_merge(void *c,void* p0); //method: merge void ( ::btAABB::* )( ::btAABB const & ) 
int btAABB_collide_plane(void *c,float* p0); //method: collide_plane bool ( ::btAABB::* )( ::btVector4 const & ) const
//not supported method: plane_classify ::eBT_PLANE_INTERSECTION_TYPE ( ::btAABB::* )( ::btVector4 const & ) const
// error: ::btVector4 const & - ok,  - unsupported

int btAABB_overlapping_trans_conservative2(void *c,void* p0,void* p1); //method: overlapping_trans_conservative2 bool ( ::btAABB::* )( ::btAABB const &,::BT_BOX_BOX_TRANSFORM_CACHE const & ) const
void btAABB_copy_with_margin(void *c,void* p0,float p1); //method: copy_with_margin void ( ::btAABB::* )( ::btAABB const &,::btScalar ) 
int btAABB_collide_triangle_exact(void *c,float* p0,float* p1,float* p2,float* p3); //method: collide_triangle_exact bool ( ::btAABB::* )( ::btVector3 const &,::btVector3 const &,::btVector3 const &,::btVector4 const & ) const
void btAABB_m_max_set(void *c,float* a); //attribute: ::btVector3 btAABB->m_max
void btAABB_m_max_get(void *c,float* a);
void btAABB_m_min_set(void *c,float* a); //attribute: ::btVector3 btAABB->m_min
void btAABB_m_min_get(void *c,float* a);
void* btBvhTree_new(); //constructor: btBvhTree  ( ::btBvhTree::* )(  ) 
void btBvhTree_free(void *c);
 
int btBvhTree_getNodeCount(void *c); //method: getNodeCount int ( ::btBvhTree::* )(  ) const
void btBvhTree_build_tree(void *c,void* p0); //method: build_tree void ( ::btBvhTree::* )( ::GIM_BVH_DATA_ARRAY & ) 
void btBvhTree_setNodeBound(void *c,int p0,void* p1); //method: setNodeBound void ( ::btBvhTree::* )( int,::btAABB const & ) 
int btBvhTree_getLeftNode(void *c,int p0); //method: getLeftNode int ( ::btBvhTree::* )( int ) const
void btBvhTree__build_sub_tree(void *c,void* p0,int p1,int p2); //method: _build_sub_tree void ( ::btBvhTree::* )( ::GIM_BVH_DATA_ARRAY &,int,int ) 
void btBvhTree_clearNodes(void *c); //method: clearNodes void ( ::btBvhTree::* )(  ) 
int btBvhTree__sort_and_calc_splitting_index(void *c,void* p0,int p1,int p2,int p3); //method: _sort_and_calc_splitting_index int ( ::btBvhTree::* )( ::GIM_BVH_DATA_ARRAY &,int,int,int ) 
int btBvhTree_getEscapeNodeIndex(void *c,int p0); //method: getEscapeNodeIndex int ( ::btBvhTree::* )( int ) const
int btBvhTree_isLeafNode(void *c,int p0); //method: isLeafNode bool ( ::btBvhTree::* )( int ) const
void* btBvhTree_get_node_pointer(void *c,int p0); //method: get_node_pointer ::GIM_BVH_TREE_NODE const * ( ::btBvhTree::* )( int ) const