Physics/Bullet/Raw/BulletCollision/Gimpact.chs

{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/Gimpact/btBoxCollision.h?r=2223#291>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/Gimpact/btBoxCollision.cpp?r=2223>
-}
{#fun btAABB_invalidate as btAABB_invalidate    `( BtAABBClass bc )' =>     { withBt* `bc'  -- ^ 
 } ->  `()'   #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/Gimpact/btBoxCollision.h?r=2223#437>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/Gimpact/btBoxCollision.cpp?r=2223>
-}
{#fun btAABB_has_collision as btAABB_has_collision    `( BtAABBClass bc , BtAABBClass p0 )' =>     { withBt* `bc'  -- ^ 
, withBt* `p0'  -- ^ other
 } ->  `Bool'   #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/Gimpact/btBoxCollision.h?r=2223#377>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/Gimpact/btBoxCollision.cpp?r=2223>
-}
{#fun btAABB_appy_transform_trans_cache as btAABB_appy_transform_trans_cache    `( BtAABBClass bc , BT_BOX_BOX_TRANSFORM_CACHEClass p0 )' =>     { withBt* `bc'  -- ^ 
, withBt* `p0'  -- ^ trans
 } ->  `()'   #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/Gimpact/btBoxCollision.h?r=2223#341>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/Gimpact/btBoxCollision.cpp?r=2223>
-}
{#fun btAABB_calc_from_triangle_margin as btAABB_calc_from_triangle_margin    `( BtAABBClass bc )' =>     { withBt* `bc'  -- ^ 
, withVec3* `Vec3'  peekVec3* -- ^ V1
, withVec3* `Vec3'  peekVec3* -- ^ V2
, withVec3* `Vec3'  peekVec3* -- ^ V3
,  `Float'  -- ^ margin
 } ->  `()'   #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/Gimpact/btBoxCollision.h?r=2223#341>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/Gimpact/btBoxCollision.cpp?r=2223>
-}
{#fun btAABB_calc_from_triangle_margin as btAABB_calc_from_triangle_margin'    `( BtAABBClass bc )' =>     { withBt* `bc'  -- ^ 
, allocaVec3-  `Vec3'  peekVec3* -- ^ V1
, allocaVec3-  `Vec3'  peekVec3* -- ^ V2
, allocaVec3-  `Vec3'  peekVec3* -- ^ V3
,  `Float'  -- ^ margin
 } ->  `()'   #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/Gimpact/btBoxCollision.h?r=2223#301>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/Gimpact/btBoxCollision.cpp?r=2223>
-}
{#fun btAABB_increment_margin as btAABB_increment_margin    `( BtAABBClass bc )' =>     { withBt* `bc'  -- ^ 
,  `Float'  -- ^ margin
 } ->  `()'   #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/Gimpact/btBoxCollision.h?r=2223#393>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/Gimpact/btBoxCollision.cpp?r=2223>
-}
{#fun btAABB_merge as btAABB_merge    `( BtAABBClass bc , BtAABBClass p0 )' =>     { withBt* `bc'  -- ^ 
, withBt* `p0'  -- ^ box
 } ->  `()'   #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/Gimpact/btBoxCollision.h?r=2223#578>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/Gimpact/btBoxCollision.cpp?r=2223>
-}
{#fun btAABB_collide_plane as btAABB_collide_plane    `( BtAABBClass bc )' =>     { withBt* `bc'  -- ^ 
, withVec4* `Vec4'  peekVec4* -- ^ plane
 } ->  `Bool'   #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/Gimpact/btBoxCollision.h?r=2223#578>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/Gimpact/btBoxCollision.cpp?r=2223>
-}
{#fun btAABB_collide_plane as btAABB_collide_plane'    `( BtAABBClass bc )' =>     { withBt* `bc'  -- ^ 
, allocaVec4-  `Vec4'  peekVec4* -- ^ plane
 } ->  `Bool'   #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/Gimpact/btBoxCollision.h?r=2223#515>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/Gimpact/btBoxCollision.cpp?r=2223>
-}
{#fun btAABB_overlapping_trans_conservative2 as btAABB_overlapping_trans_conservative2    `( BtAABBClass bc , BtAABBClass p0 , BT_BOX_BOX_TRANSFORM_CACHEClass p1 )' =>     { withBt* `bc'  -- ^ 
, withBt* `p0'  -- ^ box
, withBt* `p1'  -- ^ trans1_to_0
 } ->  `Bool'   #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/Gimpact/btBoxCollision.h?r=2223#311>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/Gimpact/btBoxCollision.cpp?r=2223>
-}
{#fun btAABB_copy_with_margin as btAABB_copy_with_margin    `( BtAABBClass bc , BtAABBClass p0 )' =>     { withBt* `bc'  -- ^ 
, withBt* `p0'  -- ^ other
,  `Float'  -- ^ margin
 } ->  `()'   #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/Gimpact/btBoxCollision.h?r=2223#589>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/Gimpact/btBoxCollision.cpp?r=2223>
-}
{#fun btAABB_collide_triangle_exact as btAABB_collide_triangle_exact    `( BtAABBClass bc )' =>     { withBt* `bc'  -- ^ 
, withVec3* `Vec3'  peekVec3* -- ^ p1
, withVec3* `Vec3'  peekVec3* -- ^ p2
, withVec3* `Vec3'  peekVec3* -- ^ p3
, withVec4* `Vec4'  peekVec4* -- ^ triangle_plane
 } ->  `Bool'   #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/Gimpact/btBoxCollision.h?r=2223#589>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/Gimpact/btBoxCollision.cpp?r=2223>
-}
{#fun btAABB_collide_triangle_exact as btAABB_collide_triangle_exact'    `( BtAABBClass bc )' =>     { withBt* `bc'  -- ^ 
, allocaVec3-  `Vec3'  peekVec3* -- ^ p1
, allocaVec3-  `Vec3'  peekVec3* -- ^ p2
, allocaVec3-  `Vec3'  peekVec3* -- ^ p3
, allocaVec4-  `Vec4'  peekVec4* -- ^ triangle_plane
 } ->  `Bool'   #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/Gimpact/btBoxCollision.h?r=2223#235>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/Gimpact/btBoxCollision.cpp?r=2223>
-}
{#fun btAABB_m_max_set    `( BtAABBClass bc )' =>     { withBt* `bc' , withVec3* `Vec3'  } -> `()' #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/Gimpact/btBoxCollision.h?r=2223#235>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/Gimpact/btBoxCollision.cpp?r=2223>
-}
{#fun btAABB_m_max_get    `( BtAABBClass bc )' =>     { withBt* `bc' , allocaVec3-  `Vec3'  peekVec3* } -> `()' #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/Gimpact/btBoxCollision.h?r=2223#234>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/Gimpact/btBoxCollision.cpp?r=2223>
-}
{#fun btAABB_m_min_set    `( BtAABBClass bc )' =>     { withBt* `bc' , withVec3* `Vec3'  } -> `()' #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/Gimpact/btBoxCollision.h?r=2223#234>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/Gimpact/btBoxCollision.cpp?r=2223>
-}
{#fun btAABB_m_min_get    `( BtAABBClass bc )' =>     { withBt* `bc' , allocaVec3-  `Vec3'  peekVec3* } -> `()' #}
-- * btBvhTree
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/Gimpact/btGImpactBvh.h?r=2223#157>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/Gimpact/btGImpactBvh.cpp?r=2223>
-}
{#fun btBvhTree_new as btBvhTree    {  } -> `BtBvhTree' mkBtBvhTree* #}
{#fun btBvhTree_free    `( BtBvhTreeClass bc )' =>     { withBt* `bc'  } -> `()' #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/Gimpact/btGImpactBvh.h?r=2223#173>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/Gimpact/btGImpactBvh.cpp?r=2223>
-}
{#fun btBvhTree_getNodeCount as btBvhTree_getNodeCount    `( BtBvhTreeClass bc )' =>     { withBt* `bc'  -- ^ 
 } ->  `Int'   #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/Gimpact/btGImpactBvh.h?r=2223#164>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/Gimpact/btGImpactBvh.cpp?r=2223>
-}
{#fun btBvhTree_build_tree as btBvhTree_build_tree    `( BtBvhTreeClass bc , GIM_BVH_DATA_ARRAYClass p0 )' =>     { withBt* `bc'  -- ^ 
, withBt* `p0'  -- ^ primitive_boxes
 } ->  `()'   #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/Gimpact/btGImpactBvh.h?r=2223#194>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/Gimpact/btGImpactBvh.cpp?r=2223>
-}
{#fun btBvhTree_setNodeBound as btBvhTree_setNodeBound    `( BtBvhTreeClass bc , BtAABBClass p1 )' =>     { withBt* `bc'  -- ^ 
,  `Int'  -- ^ nodeindex
, withBt* `p1'  -- ^ bound
 } ->  `()'   #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/Gimpact/btGImpactBvh.h?r=2223#199>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/Gimpact/btGImpactBvh.cpp?r=2223>
-}
{#fun btBvhTree_getLeftNode as btBvhTree_getLeftNode    `( BtBvhTreeClass bc )' =>     { withBt* `bc'  -- ^ 
,  `Int'  -- ^ nodeindex
 } ->  `Int'   #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/Gimpact/btGImpactBvh.h?r=2223#155>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/Gimpact/btGImpactBvh.cpp?r=2223>
-}
{#fun btBvhTree__build_sub_tree as btBvhTree__build_sub_tree    `( BtBvhTreeClass bc , GIM_BVH_DATA_ARRAYClass p0 )' =>     { withBt* `bc'  -- ^ 
, withBt* `p0'  -- ^ primitive_boxes
,  `Int'  -- ^ startIndex
,  `Int'  -- ^ endIndex
 } ->  `()'   #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/Gimpact/btGImpactBvh.h?r=2223#166>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/Gimpact/btGImpactBvh.cpp?r=2223>
-}
{#fun btBvhTree_clearNodes as btBvhTree_clearNodes    `( BtBvhTreeClass bc )' =>     { withBt* `bc'  -- ^ 
 } ->  `()'   #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/Gimpact/btGImpactBvh.h?r=2223#151>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/Gimpact/btGImpactBvh.cpp?r=2223>
-}
{#fun btBvhTree__sort_and_calc_splitting_index as btBvhTree__sort_and_calc_splitting_index    `( BtBvhTreeClass bc , GIM_BVH_DATA_ARRAYClass p0 )' =>     { withBt* `bc'  -- ^ 
, withBt* `p0'  -- ^ primitive_boxes
,  `Int'  -- ^ startIndex
,  `Int'  -- ^ endIndex
,  `Int'  -- ^ splitAxis
 } ->  `Int'   #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/Gimpact/btGImpactBvh.h?r=2223#210>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/Gimpact/btGImpactBvh.cpp?r=2223>
-}
{#fun btBvhTree_getEscapeNodeIndex as btBvhTree_getEscapeNodeIndex    `( BtBvhTreeClass bc )' =>     { withBt* `bc'  -- ^ 
,  `Int'  -- ^ nodeindex
 } ->  `Int'   #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/Gimpact/btGImpactBvh.h?r=2223#179>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/Gimpact/btGImpactBvh.cpp?r=2223>
-}
{#fun btBvhTree_isLeafNode as btBvhTree_isLeafNode    `( BtBvhTreeClass bc )' =>     { withBt* `bc'  -- ^ 
,  `Int'  -- ^ nodeindex
 } ->  `Bool'   #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/Gimpact/btGImpactBvh.h?r=2223#215>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/Gimpact/btGImpactBvh.cpp?r=2223>
-}
{#fun btBvhTree_get_node_pointer as btBvhTree_get_node_pointer    `( BtBvhTreeClass bc )' =>     { withBt* `bc'  -- ^ 
,  `Int'  -- ^ index
 } ->  `GIM_BVH_TREE_NODE'  mkGIM_BVH_TREE_NODE* #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/Gimpact/btGImpactBvh.h?r=2223#184>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/Gimpact/btGImpactBvh.cpp?r=2223>
-}
